Require fs and write first test for appView

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       My Github Repo app
     </h1>
     <div id="main-container" >
-
     </div>
-
+    <input type="text" id="repo-choice" placeholder="Enter repo name" />
+    <button id="validate-button"> Validate </button>
   </body>
   <script src="bundle.js" ></script>
 </html>
