Page now displays repo name, a link to the repo, stargazers, fork count, language and image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     </div>
     <input type="text" id="repo-choice" placeholder="Enter repo name" />
     <button id="validate-button"> Validate </button>
+    <div>
+
+      <h3 id="repo-name" > </h3>
+      <a href id="repo-link"></a>
+      <h5 id="repo-stargazers"></h5>
+      <h5 id="repo-forks"></h5>
+      <h5 id="repo-language"></h5>
+      <img id="repo-image">
+
+    </div>
+
   </body>
   <script src="bundle.js" ></script>
 </html>
