Fixed repo link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="main-container" >
     </div>
     <input type="text" id="repo-choice" placeholder="Enter repo name" />
-    <button id="validate-button"> Get info </button>
+    <button id="search-repo-button"> Get info </button>
     <div>
 
       <h3 id="repo-name" > </h3>
